# mcp-neogit

./: README.md  example_workflow.py  pyproject.toml  start_server.py  test_mcp.py
mcp_client/: __init__.py  client.py  config.py  exceptions.py
mcp_server/: __init__.py  models.py  server.py
mcp_server/handlers/: __init__.py  analysis.py  github.py  gitignore.py  readme.py
mcp_server/utils/: __init__.py  config.py
